style.css
*{
    font-family: 'Roboto',  sans-serif;

}

body {
    display: flex;
    flex-direction: column;
}

.column1 {
    display: flex;
    margin-left: 100px;
    flex-direction: column;
    width: 50%;
}

.column2 {
    display: flex;
    flex-direction: column;
    width: 50%;
    height: 100%;
    margin-left: 30px;
    margin-right: 100px;
    
}



.header {
    display: flex;
    padding: 8px;
    justify-content: space-between;   
    align-items: center;
}


.top-section {
    background-color: #1F2937;
}

#hero {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 800;
    margin-bottom: 0;
}


p {
    font-size: 18px;
    color: #E5E7EB;
}

#black-text {
    color: black;
}

.box1 {
    width: 100px;
    height: 100px;
    background: transparent;
    border: 3px solid #3882F6;
    border-radius: 5px;

}

.box2 {
    width: 100px;
    height: 100px;
    background: transparent;
    border: 3px solid #3882F6;
    border-radius: 5px;

}


.box3 {
    width: 100px;
    height: 100px;
    background: transparent;
    border: 3px solid #3882F6;
    border-radius: 5px;

}

.box4 {
    width: 100px;
    height: 100px;
    background: transparent;
    border: 3px solid #3882F6;
    border-radius: 5px;

}

.info-box1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200px;
}


.info-box2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200px;
}



.info-box3 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200px;
}


.info-box4 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200px;
}


.section3 {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    align-items: center;
    justify-content: center;
    padding: 30px;
}

#quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
    width: 800px;
    margin-bottom: 0;
}

#attribution {
    display: flex;
    margin-top: 0;
    font-size: 36px;
    font-weight: 550;
    color: #1F2937;
    justify-content: flex-end;
    margin-left: 600px;
}

#black-text {
    color: black;
    font-size: 12px;
}

.section2 {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    align-items: center;
    padding: 50px;
}

.info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
}

.logo {
    display: flex;
    padding: 8px;
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 800;
    position: relative;
    bottom: 55px;

}


ul {
    display: flex;
    margin-right: 100px;
    margin-bottom: 130px;
    padding: 0;
    gap: 20px;
    list-style-type: none;
    font-size: 18px;
    color: #E5E7EB;
    
}

.placeholder {
    background-color: gray;
    padding: 60px;
    margin-bottom: 100px;
    font-style: italic;
  
}

button {
    width: 70px;
    height: 30px;
    background-color: #3882F6;
    color: #E5E7EB;
    border: none;
    font-weight: 800;
    border-radius: 5px;
}

.section4 {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 100px;

}

.blue-box {
    background: #3882F6;
    height: 120px;
    width: 950px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.call-action {
    display: flex;
    flex-direction: column;
    margin-left: 30px;
}

#action, #action2 {
    color: #F9FAF8;
    margin: 0;
}

#action {
    font-weight: 800;
}

#button2 {
    background: transparent;
    border-radius: 5px;
    border: 2px solid #F9FAF8;
    width: 90px;
    height: 30px;
    margin-left: 270px;
    font-weight: 800;

}

footer {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

#footer-text {
    font-size: 12px;
    color: #E5E7EB;
}

